--- a/hawc/apps/epimeta/templates/epimeta/metaresult_list.html
+++ b/hawc/apps/epimeta/templates/epimeta/metaresult_list.html
@@ -3,7 +3,14 @@
 {% load bs4 %}
 
 {% block content %}
-<h2>Meta-analysis/pooled results ({{page_obj.paginator.count}} found)</h2>
+<div class="d-flex mb-2">
+    <h2 class="mb-0">Meta-analysis/pooled results ({{page_obj.paginator.count}} found)</h2>
+    {% if feature_flags.ENABLE_FILTER_DOWNLOADS and page_obj.paginator.count > 0 %}
+    {% actions %}
+    <a class="dropdown-item" href="#"><i class="fa fa-fw fa-download mr-1"></i>Download (xlsx)</a>
+    {% endactions %}
+    {% endif %}
+</div>
 {% include 'common/inline_filter_form.html' %}
 <table id="mainTbl" class="table table-sm table-striped">
     {% bs4_colgroup '13,17,19,14,13,12,12' %}
