--- a/hawc/apps/lit/templates/lit/reference_search.html
+++ b/hawc/apps/lit/templates/lit/reference_search.html
@@ -1,7 +1,16 @@
 {% extends 'assessment-rooted.html' %}
 
+{% load bs4 %}
+
 {% block content %}
-<h2>References ({{page_obj.paginator.count}} found)</h2>
+<div class="d-flex mb-2">
+    <h2 class="mb-0">References ({{page_obj.paginator.count}} found)</h2>
+    {% if feature_flags.ENABLE_FILTER_DOWNLOADS and page_obj.paginator.count > 0 %}
+    {% actions %}
+        <a class="dropdown-item" href="#"><i class="fa fa-fw fa-download mr-1"></i>Download (xlsx)</a>
+    {% endactions %}
+    {% endif %}
+</div>
 {% include 'common/inline_filter_form.html' %}
 <div id="main"></div>
 {% include 'includes/paginator.html' with plural_object_name='references' %}
