--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -46,7 +46,11 @@
             <form class="ml-auto"
                 hx-post="{% url 'lit:api:reference-merge-tags' ref.pk %}">
                 <button class="approve btn btn-sm btn-success mr-2 align-center">
-                    <i class="fa fa-fw fa-check" aria-hidden="true"></i>&nbsp;Apply All Tags Below
+                    <i class="fa fa-fw fa-check" aria-hidden="true"></i>&nbsp;Approve All
+                    <span class="badge badge-light ml-2" data-toggle="popover"
+                        data-content="Accept and merge all tag additions and removals from individual user reviews. Tags are only removed if removed by all users.">
+                        <i class="fa fa-fw fa-question"></i>
+                    </span>
                 </button>
             </form>
         </div>
