--- a/hawc/apps/lit/templates/lit/conflict_resolution.html
+++ b/hawc/apps/lit/templates/lit/conflict_resolution.html
@@ -11,8 +11,8 @@
     </li>
     {% empty %}
     <li class="list-group-item">
-        <div class="alert alert-success">
-            <i class='fa fa-fw fa-check mr-1'></i>&nbsp;Conflict resolution complete! No conflicts to resolve.
+        <div class="alert alert-warning">
+            <i class='fa fa-fw fa-exclamation-triangle mr-1'></i>&nbsp;No conflicts found.
         </div>
     </li>
     {% endfor %}
