--- a/hawc/apps/hawc_admin/templates/admin/dashboard.html
+++ b/hawc/apps/hawc_admin/templates/admin/dashboard.html
@@ -12,11 +12,11 @@
 
 {% block content %}
     <div hx-target="#dashboard-content" style="padding: 1em">
-        <button hx-get="{% url 'admin_dashboard_assessment_size' %}">Assessment size</button>
-        <button hx-get="{% url 'admin_dashboard_assessments' %}">Assessments growth</button>
-        <button hx-get="{% url 'admin_dashboard_growth' %}">Item growth</button>
-        <button hx-get="{% url 'admin_dashboard_users' %}">Users</button>
-        <button hx-get="{% url 'admin_dashboard_changes' %}">Daily changes</button>
+        <button hx-get="{% url 'admin_dashboard' %}?action=assessment_size">Assessment size</button>
+        <button hx-get="{% url 'admin_dashboard' %}?action=assessment_growth">Assessments growth</button>
+        <button hx-get="{% url 'admin_dashboard' %}?action=growth">Item growth</button>
+        <button hx-get="{% url 'admin_dashboard' %}?action=users">Users</button>
+        <button hx-get="{% url 'admin_dashboard' %}?action=daily_changes">Daily changes</button>
     </div>
 
     <div id="dashboard-content">
