--- a/hawc/apps/mgmt/templates/mgmt/analytics.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics.html
@@ -11,18 +11,18 @@
     <button class="nav-link active" data-toggle="pill" data-target="#about">Home</button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#" hx-get="?action=growth" data-toggle="pill" hx-target="#growth" data-target="#growth">Growth</a>
+    <button class="nav-link" hx-get="?action=growth" data-toggle="pill" hx-target="#growth" data-target="#growth">Growth</button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#" hx-get="?action=time_series" data-toggle="pill" hx-target="#time_series" data-target="#time_series">Time Series</a>
+    <button class="nav-link" hx-get="?action=time_series" data-toggle="pill" hx-target="#time_series" data-target="#time_series">Time Series</button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#" hx-get="?action=time_spent" data-toggle="pill" hx-target="#time_spent" data-target="#time_spent">Time Spent</a>
+    <button class="nav-link" hx-get="?action=time_spent" data-toggle="pill" hx-target="#time_spent" data-target="#time_spent">Time Spent</button>
   </li>
 </ul>
 <div class="tab-content mx-2 mt-2">
   <div class="tab-pane fade show active" id="about" role="tabpanel">
-    ...
+    This content is available with the initial page load.
   </div>
   <div class="tab-pane fade" id="growth" role="tabpanel">
     <p class="text-muted">Loading...</p>
