--- a/hawc/apps/myuser/templates/myuser/hawcuser_form.html
+++ b/hawc/apps/myuser/templates/myuser/hawcuser_form.html
@@ -5,5 +5,5 @@
 
 {% block content %}
 {% crispy form %}
-{% include "registration/license.html" %}
+{% include "registration/license.html" with modal_id='license_modal'%}
 {% endblock content %}
