--- a/hawc/templates/registration/license.html
+++ b/hawc/templates/registration/license.html
@@ -1,51 +1,39 @@
-<div id="license_modal" class="modal fade" tabindex="-1" role="dialog">
-     <div class="modal-dialog" role="document">
-          <div class="modal-content">
-               <div class="modal-header">
-                    <h5 class="modal-title">HAWC license</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                         <span aria-hidden="true">&times;</span>
-                    </button>
-               </div>
-               <div class="modal-body">
-<pre>
-MIT License
+{% extends 'common/modal_template.html' %}
+{% block modal_title %}HAWC license{% endblock %}
+{% block modal_body %}
+     <pre>
+          MIT License
 
-Copyright (c) 2018 National Institute for Environmental Health Sciences,
-    Texas A&amp;M University, and
-    University of North Carolina at Chapel Hill
+          Copyright (c) 2018 National Institute for Environmental Health Sciences,
+          Texas A&amp;M University, and
+          University of North Carolina at Chapel Hill
 
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
+          Permission is hereby granted, free of charge, to any person obtaining a copy
+          of this software and associated documentation files (the "Software"), to deal
+          in the Software without restriction, including without limitation the rights
+          to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+          copies of the Software, and to permit persons to whom the Software is
+          furnished to do so, subject to the following conditions:
 
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
+          The above copyright notice and this permission notice shall be included in all
+          copies or substantial portions of the Software.
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
+          THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+          IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+          FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+          AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+          LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+          OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+          SOFTWARE.
 
-In addition to the MIT License, the following notice is added:
+          In addition to the MIT License, the following notice is added:
 
-This license does not imply an endorsement of any product or service
-by the U.S. federal government or any of its organizations, units, or employees,
-Texas A&amp;M University, or the University of North Carolina at Chapel Hill.
-The notice shall be included in all copies or substantial portions of the
-Software.
-</pre>
-               </div>
-               <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-               </div>
-          </div>
-     </div>
-</div>
+          This license does not imply an endorsement of any product or service
+          by the U.S. federal government or any of its organizations, units, or employees,
+          Texas A&amp;M University, or the University of North Carolina at Chapel Hill.
+          The notice shall be included in all copies or substantial portions of the
+          Software.
+     </pre>
+{% endblock %}
+
 
