--- a/hawc/apps/summary/templates/summary/datapivot_form.html
+++ b/hawc/apps/summary/templates/summary/datapivot_form.html
@@ -6,7 +6,7 @@
 {% block content %}
   {% include "assessment/preferred_dose_units_widget.html" %}
   {% crispy form %}
-  {% include "summary/_smartTagEditModal.html" with form=smart_tag_form only %}
+  {% include "summary/_smartTagEditModal.html" with modal_id="smartTagModal" form=smart_tag_form only %}
 {% endblock %}
 
 {% block extrajs %}
