--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="main" style="display:none;"></div>
-{% include "summary/_smartTagEditModal.html" with form=smart_tag_form only %}
+{% include "summary/_smartTagEditModal.html" with modal_id="smartTagModal" form=smart_tag_form only %}
 {% endblock %}
 
 {% block extrajs %}
