--- a/hawc/apps/myuser/templates/myuser/accept_license.html
+++ b/hawc/apps/myuser/templates/myuser/accept_license.html
@@ -6,6 +6,6 @@
 </div>
 <div class="row m-auto">
     {% crispy form %}
-    {% include "registration/license.html" %}
+    {% include "registration/license.html" with modal_id="license_modal"%}
 </div>
 {% endblock content %}
