fix bottom right legend location; fix dragging

--- a/hawc/static/css/d3.css
+++ b/hawc/static/css/d3.css
@@ -65,7 +65,7 @@ svg {
 
 /* dose-response data points */
 .dose_points {
-    fill: #a8b0c7;
+    fill: #a8b2d3;
     stroke: white;
     stroke-width: 1px;
 }
