--- a/hawc/apps/animal/templates/animal/endpoint_detail.html
+++ b/hawc/apps/animal/templates/animal/endpoint_detail.html
@@ -46,8 +46,7 @@
 
     <div id='dr-plot-container' class="col-md-5">
       <h3>Plot</h3>
-      <div id='bmd_ds_plot'></div>
-      <br/>
+      <div id='bmd_ds_plot' class="mb-5"></div>
       <div id="endpoint-general-notes"></div>
     </div>
   </div>
