--- a/hawc/apps/mgmt/templates/mgmt/analytics/growth.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/growth.html
@@ -1,1 +1,52 @@
 Assessment Growth
+{% block content %}
+<div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Number Searches</h5>
+            <p class="card-text">{{ n }}</p>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Searches by type</h5>
+            <p class="card-text">{{ search_types }}</p>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Total number of references</h5>
+            <p class="card-text">{{ total_n_refs }}</p>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Number of references per import</h5>
+            <div>{% plotly refs_per_import_plot event="htmx" %}</div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">References by publication year</h5>
+            <div>{% plotly refs_by_year_plot event="htmx" %}</div>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Reference tags breakdown</h5>
+            <h6 class="card-subtitle mb-2 text-muted">References with no tags:</h6>
+            <p class="card-text">{{ ref_tags_breakdown.no_tags }}</p>
+            <h6 class="card-subtitle mb-2 text-muted">References with tags:</h6>
+            <p class="card-text">{{ ref_tags_breakdown.with_tags }}</p>
+            <h6 class="card-subtitle mb-2 text-muted">Total tags applied:</h6>
+            <p class="card-text">{{ ref_tags_breakdown.total_tags_applied }}</p>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">References and tags plot</h5>
+            <div>{% plotly refs_tags_plot event="htmx" %}</div>
+        </div>
+    </div>
+</div>
+{% endblock %}
