added time_spent analytics

--- a/hawc/apps/mgmt/templates/mgmt/analytics/time_series.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/time_series.html
@@ -20,7 +20,7 @@ Assessment Time Series
     </div>
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">References created per month</h5>
+            <h5 class="card-title">References created over time</h5>
             <div>{% plotly refs_per_month event='htmx' %}</div>
         </div>
     </div>
