--- a/hawc/apps/mgmt/templates/mgmt/analytics/growth.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/growth.html
@@ -1,63 +1,66 @@
-Assessment Growth
 {% block content %}
-<div class="card" >
+<div class="card">
     <div class="card-header">
         Literature Screening Growth
     </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Number Searches</h5>
-            <p class="card-text">{{ n }}</p>
+    <div class="d-flex justify-content-between">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Number Searches</h5>
+                <p class="card-text">{{ n }}</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Searches by type</h5>
+                <p class="card-text">{{ search_types }}</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Total number of references</h5>
+                <p class="card-text">{{ total_n_refs }}</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Reference tags breakdown</h5>
+                <h6 class="card-subtitle mb-2 text-muted">References with no tags:</h6>
+                <p class="card-text">{{ ref_tags_breakdown.no_tags }}</p>
+                <h6 class="card-subtitle mb-2 text-muted">References with tags:</h6>
+                <p class="card-text">{{ ref_tags_breakdown.with_tags }}</p>
+                <h6 class="card-subtitle mb-2 text-muted">Total tags applied:</h6>
+                <p class="card-text">{{ ref_tags_breakdown.total_tags_applied }}</p>
+            </div>
         </div>
     </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Searches by type</h5>
-            <p class="card-text">{{ search_types }}</p>
+
+    <div class="d-flex justify-content-between">
+        <div class="card" style="width: 33%;">
+            <div class="card-body">
+                <h5 class="card-title">Number of references per import</h5>
+                <div>{% plotly refs_per_import_plot event="htmx" %}</div>
+            </div>
         </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Total number of references</h5>
-            <p class="card-text">{{ total_n_refs }}</p>
+        <div class="card flex-fill">
+            <div class="card-body">
+                <h5 class="card-title">References by publication year</h5>
+                <div>{% plotly refs_by_year_plot event="htmx" %}</div>
+            </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">Number of references per import</h5>
-            <div>{% plotly refs_per_import_plot event="htmx" %}</div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">References by publication year</h5>
-            <div>{% plotly refs_by_year_plot event="htmx" %}</div>
-        </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Reference tags breakdown</h5>
-            <h6 class="card-subtitle mb-2 text-muted">References with no tags:</h6>
-            <p class="card-text">{{ ref_tags_breakdown.no_tags }}</p>
-            <h6 class="card-subtitle mb-2 text-muted">References with tags:</h6>
-            <p class="card-text">{{ ref_tags_breakdown.with_tags }}</p>
-            <h6 class="card-subtitle mb-2 text-muted">Total tags applied:</h6>
-            <p class="card-text">{{ ref_tags_breakdown.total_tags_applied }}</p>
-        </div>
-    </div>
-    <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">References and tags plot</h5>
-            <div>{% plotly refs_tags_plot event="htmx" %}</div>
+        <div class="card" style="width: 33%;">
+            <div class="card-body">
+                <h5 class="card-title">References and tags plot</h5>
+                <div>{% plotly refs_tags_plot event="htmx" %}</div>
+            </div>
         </div>
     </div>
 </div>
-
 <div class="card">
     <div class="card-header">
         Study Growth
     </div>
-    <div class="card" style="width: 18rem;">
+    <div class="card">
         <div class="card-body">
             <h5 class="card-title">Study classifications - Turn into bar chart?</h5>
             <h6 class="card-subtitle mb-2 text-muted">Total number of studies:</h6>
@@ -82,35 +85,37 @@ Assessment Growth
     <div class="card-header">
         Animal Group Growth
     </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Animal group data breakdown</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Number of studies:</h6>
-            <p class="card-text">{{ animal_counts.studies }}</p>
-            <h6 class="card-subtitle mb-2 text-muted">Number of experiments:</h6>
-            <p class="card-text">{{ animal_counts.experiments }}</p>
-            <h6 class="card-subtitle mb-2 text-muted">Number of animal groups:</h6>
-            <p class="card-text">{{ animal_counts.animal_groups }}</p>
-            <h6 class="card-subtitle mb-2 text-muted">Number of endpoints:</h6>
-            <p class="card-text">{{ animal_counts.endpoints }}</p>
+    <div class="d-flex justify-content-between">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Animal group data breakdown</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Number of studies:</h6>
+                <p class="card-text">{{ animal_counts.studies }}</p>
+                <h6 class="card-subtitle mb-2 text-muted">Number of experiments:</h6>
+                <p class="card-text">{{ animal_counts.experiments }}</p>
+                <h6 class="card-subtitle mb-2 text-muted">Number of animal groups:</h6>
+                <p class="card-text">{{ animal_counts.animal_groups }}</p>
+                <h6 class="card-subtitle mb-2 text-muted">Number of endpoints:</h6>
+                <p class="card-text">{{ animal_counts.endpoints }}</p>
+            </div>
         </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Number of endpoints with data extracted:</h5>
-            <p class="card-text">{{ n_endpoints_extracted }}</p>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Number of endpoints with data extracted:</h5>
+                <p class="card-text">{{ n_endpoints_extracted }}</p>
+            </div>
         </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Number of endpoints using EHV:</h5>
-            <p class="card-text">{{ n_endpoints_ehv }}</p>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Number of endpoints using EHV:</h5>
+                <p class="card-text">{{ n_endpoints_ehv }}</p>
+            </div>
         </div>
-    </div>
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Number of dose response groups:</h5>
-            <p class="card-text">{{ n_dose_res_groups }}</p>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Number of dose response groups:</h5>
+                <p class="card-text">{{ n_dose_res_groups }}</p>
+            </div>
         </div>
     </div>
     <div class="card">
