--- a/hawc/apps/lit/templates/lit/conflict_resolution.html
+++ b/hawc/apps/lit/templates/lit/conflict_resolution.html
@@ -1,7 +1,14 @@
 {% extends 'assessment-rooted.html' %}
 
+{% load bs4 %}
 {% block content %}
-<h2>Resolve Tag Conflicts</h2>
+<div class="d-flex">
+    <h2>Resolve Tag Conflicts</h2>
+    {% actions %}
+    <a class="dropdown-item" data-toggle="modal" data-target="#bulk_merge_form">Bulk Merge Conflicts</a>
+    {% endactions %}
+</div>
+{% include "lit/bulk_merge_modal.html" with modal_id='bulk_merge_form'%}
 {% include 'common/inline_filter_form.html' %}
 <ul class="list-group list-group-flush my-3">
     {% for ref in object_list %}
