--- a/hawc/apps/lit/templates/lit/reference_tag_status.html
+++ b/hawc/apps/lit/templates/lit/reference_tag_status.html
@@ -2,5 +2,5 @@
 
 
 {% block content %}
-{% include 'lit/_reference_with_tags.html' with ref=object %}
+{% include 'lit/_reference_with_tags.html' with ref=object show_user_tags=True %}
 {% endblock %}
