--- a/hawc/apps/mgmt/templates/mgmt/analytics.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics.html
@@ -20,7 +20,7 @@
 </ul>
 <div class="tab-content mx-2 mt-2">
   <div class="tab-pane fade show active" id="about" role="tabpanel">
-    This content is available with the initial page load.
+    This content is available with the initial page load. Responses are cached for one hour.
   </div>
   <div class="tab-pane fade" id="growth" role="tabpanel">
     <p class="text-muted">Loading...</p>
