--- a/hawc/apps/assessment/templates/assessment/assessment_log_list.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_log_list.html
@@ -37,7 +37,7 @@
         {% for log in object_list %}
         <tr>
             <td>
-                <a class="btn btn-outline-primary btn-sm w-100" href="{{log.get_object_url}}">View</a>
+                <a class="btn btn-primary btn-sm w-100" href="{{log.get_object_url}}">View</a>
             </td>
             <td>
                 {% if log.object_id %}
