--- a/hawc/apps/lit/templates/lit/bulk_merge_modal.html
+++ b/hawc/apps/lit/templates/lit/bulk_merge_modal.html
@@ -6,13 +6,17 @@ Bulk Merge Tag Conflicts
 {% endblock %}
 {% block modal_body %}
 <form method="post" enctype="multipart/form-data">
-    <div style="width: 50vw;">
+    <div style="width: 50vw;" class="justify-content-center">
     {% crispy bulk_merge_form %}
     </div>
+    <div>
+        <div id="merge-results"></div>
+    </div>
     <button class="btn btn-primary ml-2"
+        hx-target="#merge-results"
         hx-post="{% url 'lit:api:assessment-bulk-merge-conflicts' assessment.pk %}"
         hx-encoding="multipart/form-data">
-    <i class="fa fa-icon fa-eye"></i>&nbsp; Preview
+    Bulk Merge Tags
     </button>
     <button type="button" class="btn btn-light" data-dismiss="modal" aria-label="Close">
         Cancel
