--- a/hawc/apps/summary/templates/summary/visual_detail_image.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_image.html
@@ -1,4 +1,5 @@
 {% extends 'assessment-rooted.html' %}
+{% load static %}
 
 {% block content %}
 <div class="visualization">
@@ -13,7 +14,7 @@
       {% endactions %}
     {% endif %}
   </div>
-  {% plotly object.get_plotly_from_json %}
+  <img src="{{object.image.url}}" style="max-width: 100%" />
   <p>{{object.caption|safe}}</p>
 </div>
 {% endblock %}
