--- a/hawc/apps/udf/templates/udf/modelbinding_detail.html
+++ b/hawc/apps/udf/templates/udf/modelbinding_detail.html
@@ -27,7 +27,7 @@
             <td>
                 <p><a href="{% url 'udf:udf_detail' object.form.pk %}">{{object.form.name}}</a></p>
                 <p class='my-3'><u>Form Preview:</u></p>
-                {% crispy object.form_instance %}
+                {% crispy object.form_field %}
             </td>
         </tr>
         <tr>
