--- a/hawc/apps/mgmt/templates/mgmt/analytics/time_spent.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/time_spent.html
@@ -1,13 +1,16 @@
-Assessment Time Spent
-<div class="card">
-    <div class="card-body">
-        <h5 class="card-title">Time spent per model</h5>
-        <div>{% plotly time_spent_per_model_plot event="htmx" %}</div>
+{% block content %}
+<div class="card-columns">
+    <div class="card box-shadow">
+        <div class="card-body">
+            <p class="h3 m-0 mt-1">{{ total_time_spent }}</p>
+            <p class="small">spent on assessment</p>
+        </div>
+    </div>
+    <div class="card box-shadow">
+        <div class="card-body">
+            <h5 class="card-title">Time spent per model</h5>
+            <div>{% plotly time_spent_per_model_plot event="htmx" %}</div>
+        </div>
     </div>
 </div>
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">Total time spent on assessment</h5>
-        <p class="card-text">{{ total_time_spent }}</p>
-    </div>
-</div>
+{% endblock %}
