improve UDF form layout

--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -3,5 +3,17 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-{% crispy form %}
+<div class="row">
+    <div class="col-md-6">
+    {% crispy form %}
+    </div>
+    <div class="col-md-6 card">
+        <div class="card-body">
+            <h4 class="card-title">Form Preview</h4>
+            <div id="schema-preview-frame">
+                <div class="alert alert-info" role="alert">Click Preview to see what your form will look like!</div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
