--- a/hawc/apps/mgmt/templates/mgmt/analytics.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics.html
@@ -20,7 +20,22 @@
 </ul>
 <div class="tab-content mx-2 mt-2">
   <div class="tab-pane fade show active" id="about" role="tabpanel">
-    This content is available with the initial page load. Responses are cached for one hour.
+    This is the Assessment Analytics home page. From here, you can navigate to the different tabs to learn more about your assessment. Responses are cached for one hour.
+    <br></br>
+    <div class="d-flex justify-content-between">
+      <div class="text-center">
+        <h4>Check assessment growth</h5>
+        <i class="fa fa-line-chart fa-3x"></i>
+      </div>
+      <div class="text-center">
+        <h4>Find available types of content</h5>
+        <i class="fa fa-search fa-3x"></i>
+      </div>
+      <div class="text-center">
+        <h4>Discover how it has changed over time</h5>
+        <i class="fa fa-clock-o fa-3x"></i>
+      </div>
+    </div>
   </div>
   <div class="tab-pane fade" id="growth" role="tabpanel">
     <p class="text-muted">Loading...</p>
